# Piscine_AI

./: README.md  set_conda.sh
Module00/ex00/: answers.txt  requirements.txt
Module00/ex01/: exec.py
Module00/ex02/: whois.py
Module00/ex03/: count.py
Module00/ex04/: operations.py
Module00/ex05/: kata00.py  kata01.py  kata03.py
Module00/ex06/: recipe.py
Module00/ex07/: filterwords.py
Module00/ex08/: sos.py
Module00/ex09/: guess.py
Module00/ex10/: loading.py
Module01/ex00/: book.py  recipe.py  test.py
Module01/ex01/: game.py
Module01/ex02/: test.py  vector.py
Module01/ex03/: generator.py
Module01/ex04/: eval.py
Module01/ex05/: banking_test1.py  banking_test2.py  the_bank.py
Module02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
Module02/ex01/: main.py
Module02/ex02/: logger.py
Module02/ex03/: bad.csv  csvreader.py
Module02/ex04/: build.sh
Module02/ex04/my_minipack/: README.md  pyproject.toml  setup.py
Module02/ex04/my_minipack/src/my_minipack-1.0.0/: logger.py  progress_bar.py
Module02/ex04/my_minipack/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
Module02/ex05/: TinyStatistician.py
Module03/ex00/: NumPyCreator.py  test.py
Module03/ex01/: ImageProcessor.py  test.py
Module03/ex02/: ScrapBooker.py  test.py
Module03/ex03/: ColorFilter.py  test.py
Module03/ex04/: Kmeans.py  test.py
Module04/ex01/: FileLoader.py  YoungestFellah.py
Module04/ex02/: ProportionBySport.py
Module04/ex03/: HowManyMedals.py
Module04/ex04/: SpatioTemporalData.py
Module04/ex05/: HowManyMedalsByCountry.py
Module04/ex06/: MyPlotLib.py
(+54 files in other folders)
